# geode

./: .gitignore  README.md  pyproject.toml
examples/: black_hills_analysis.py
geode/: __init__.py
geode/analysis/: __init__.py  ndvi.py
