[tool.poetry]
name = "geode"
version = "0.1.0"
description = "Geospatial Environmental Data Explorer - Tools for analyzing environmental changes using satellite imagery"
authors = ["OpenHands <openhands@all-hands.dev>"]
license = "MIT"
readme = "README.md"
packages = [{include = "geode"}]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.24"
pandas = "^2.0"
geopandas = "^0.14"
rasterio = "^1.3"
folium = "^0.15"
matplotlib = "^3.7"
seaborn = "^0.13"
pystac-client = "^0.7"
shapely = "^2.0"
requests = "^2.31"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
black = "^23.0"
flake8 = "^6.0"
jupyter = "^1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"